[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "h2pgui"
version = "0.1.0"
maintainers = [
    { name = "Ignacio Icaza", email = "i.icaza.navarro@student.vu.nl" },
]
description = "GUI for H2PControl servers"
requires-python = ">=3.12"
dependencies = [
    "grpcio",
    "grpcio>=1.80.0",
    "protobuf>=7.34.1",
    "PySide6>=6.7.0",
    "pyqtgraph>=0.13.7",
    "beyer-labs-h2pcontrol-grpc-python>=1.80.0.1.20260406165239",
    "beyer-labs-h2pcontrol-protocolbuffers-pyi>=34.1.0.1.20260406165239",
    "beyer-labs-h2pcontrol-protocolbuffers-python>=34.1.0.1.20260406165239",
]

[project.scripts]
h2pgui = "h2pgui.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["h2pgui"]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.uv.sources]
h2pcontrol-sdk = { git = "https://github.com/torbenfreise/h2pcontrol-sdk", rev = "0.1.2" }
